--- a/organic/about-us.html
+++ b/organic/about-us.html
@@ -1010,7 +1010,7 @@
             src="assets/images/shapes/shape12.png"
             alt="image_not_found"
           />
-        </section> -->
+        </section>
         <!-- team section start -->
 
         <!-- service section start -->
