--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- favicon icon -->
     <link
       rel="shortcut icon"
-      href="organic/assets/images/icons/favicon.ico"
+      href="organic/assets/images/logo/Bansilaal-logo.png"
       type="image/x-icon"
     />
 
@@ -130,7 +130,7 @@
                       <li>
                         <a
                           target="_blank"
-                          href="https://wa.me/919937290939/?text=I Want Spices"
+                          href="https://wa.me/9937290939/?text=I Want Spices"
                         >
                           <img
                             src="organic/assets/images/cart/whatsapp.gif"
@@ -225,7 +225,7 @@
                       <li>
                         <a
                           target="_blank"
-                          href="https://wa.me/919937290939/?text=I Want Spices"
+                          href="https://wa.me/919337454603/?text=I Want Spices"
                         >
                           <img
                             src="/organic/assets/images/cart/whatsapp.gif"
