--- a/organic/about-us.html
+++ b/organic/about-us.html
@@ -127,7 +127,7 @@
                       <li>
                         <a
                           target="_blank"
-                          href="https://wa.me/919937290939/?text=I Want Spices"
+                          href="https://wa.me/919337454603/?text=I Want Spices"
                         >
                         <img
                         src="../organic/assets//images/cart/whatsapp.gif"
@@ -226,7 +226,7 @@
                       <li>
                         <a
                           target="_blank"
-                          href="https://wa.me/919937290939/?text=I Want Spices"
+                          href="https://wa.me/919337454603/?text=I Want Spices"
                         >
                         <img
                         src="../organic/assets//images/cart/whatsapp.gif"
@@ -1010,7 +1010,7 @@
             src="assets/images/shapes/shape12.png"
             alt="image_not_found"
           />
-        </section>
+        </section> -->
         <!-- team section start -->
 
         <!-- service section start -->
