--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home V.1 - Organic - Food E-commerce HTML Template</title>
+    <title>Banshilal Spices</title>
     <!-- favicon icon -->
     <link
       rel="shortcut icon"
@@ -130,7 +130,7 @@
                       <li>
                         <a
                           target="_blank"
-                          href="https://wa.me/9937290939/?text=I Want Spices"
+                          href="https://wa.me/919937290939/?text=I Want Spices"
                         >
                           <img
                             src="organic/assets/images/cart/whatsapp.gif"
@@ -225,12 +225,12 @@
                       <li>
                         <a
                           target="_blank"
-                          href="https://wa.me/919337454603/?text=I Want Spices"
+                          href="https://wa.me/919937290939/?text=I Want Spices"
                         >
                           <img
                             src="/organic/assets/images/cart/whatsapp.gif"
                             alt="whatsapp icon"
-                            style="height: 75px;"
+                            style="height: 50px;"
                           />
                         </a>
                       </li>
@@ -265,13 +265,13 @@
             </video>
 
             <div class="container">
-              <div class="row text-center">
+              <div class="row text-center" id="initial_banner">
                 <div class="col banner_content" style="position: relative;">
                   
-                  <div class="banner_title m-auto" style="padding-top: 200px;">
+                  <div class="banner_title m-auto" style="padding-top: 250px;">
                     <h2>
                       <span style="color: white">Organic</span>
-                      <font class="first" style="color: white"  >Whole Spices & Foods You Cook</font>
+                      <font class="first" style="color: white !important"  >Whole Spices & Foods You Cook</font>
                       <!-- <font class="first"></font> -->
                       <font class="text-effect">
                         <span>H</span><span>e</span><span>a</span><span>l</span
@@ -306,7 +306,7 @@
   <div class="container">
     <div class="row">
       <div class="category_top_content">
-        <div class="category_title pb-3">
+        <div class="category_title pb-3 d-flex justify-content-around">
           <h2>Popular Categories</h2>
         </div>
       </div>
