--- a/organic/shop-list-sidebar.html
+++ b/organic/shop-list-sidebar.html
@@ -7,7 +7,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Shop List Sidebar - Organic - Food E-commerce HTML Template</title>
+   <title>Shop List Sidebar | Banshilal Spices</title>
    <!-- favicon icon -->
    <link rel="shortcut icon" href="assets/images/icons/favicon.ico" type="image/x-icon">
 
