--- a/organic/about-us.html
+++ b/organic/about-us.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us V.1 - Organic - Food E-commerce HTML Template</title>
+    <title>About Us | Banshilal Spices</title>
     <!-- favicon icon -->
     <link
       rel="shortcut icon"
-      href="assets/images/icons/favicon.ico"
+      href="assets/images/logo/Bansilaal-logo.png"
       type="image/x-icon"
     />
 
@@ -70,9 +70,9 @@
             <!-- web menubar start-->
             <div class="webMenu d-none d-lg-block position-relative">
               <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand position-relative" href="../../index.html"
+                <a class="navbar-brand position-relative" href="../index.html"
                   ><img
-                    src="assets/images/logo/Bansilaal-logo.png"
+                    src="../organic/assets/images/logo/Bansilaal-logo.png"
                     alt="image_not_found"
                     width="200px"
                 /></a>
@@ -99,23 +99,25 @@
                         href="../index.html"
                         id="home_submenu"
                         role="button"
+                        aria-expanded="false"
                         >Home</a
                       >
                     </li>
+
                     <li class="nav-item nav_item_has_child px-2 dropdown">
                       <a
                         class="nav-link"
-                        href="shop-list.html"
+                        href="../organic/shop-list.html"
                         id="shop_submenu"
                         role="button"
                         >Product</a
                       >
                     </li>
                     <li class="nav-item nav_item_has_child px-2">
-                      <a class="nav-link active" href="about-us.html">About</a>
+                      <a class="nav-link active" href="../organic/about-us.html">About</a>
                     </li>
                     <li class="nav-item nav_item_has_child dropdown px-2">
-                      <a class="nav-link" href="contact-us.html" role="button"
+                      <a class="nav-link" href="../organic/contact-us.html" role="button"
                         >Contact Us</a
                       >
                     </li>
@@ -127,14 +129,14 @@
                       <li>
                         <a
                           target="_blank"
-                          href="https://wa.me/919337454603/?text=I Want Spices"
+                          href="https://wa.me/919937290939/?text=I Want Spices"
                         >
-                        <img
-                        src="../organic/assets//images/cart/whatsapp.gif"
-                        alt="whatsapp icon"
-                        style="height: 75px;"
+                          <img
+                            src="../organic/assets/images/cart/whatsapp.gif"
+                            alt="whatsapp icon"
+                            style="height: 50px;"
 
-                      />
+                          />
                         </a>
                       </li>
                     </ul>
@@ -144,17 +146,17 @@
               <!-- webmenu bottom shape -->
               <div class="webmenu_bottom_shape_left position-absolute">
                 <img
-                  src="assets/images/shapes/shape1.png"
+                  src="../organic/assets/images/shapes/shape1.png"
                   alt="image_not_found"
                 />
               </div>
             </div>
             <!-- mobile menubar start -->
             <div class="mobileMenu d-block d-lg-none">
-              <nav class="n<avbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="../index.html"
+              <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="navbar-brand" href="index.html"
                   ><img
-                    src="assets/images/logo/Bansilaal-logo.png"
+                    src="../organic/assets/images/logo/Bansilaal-logo.png"
                     alt="image_not_found"
                     width="200px"
                 /></a>
@@ -173,11 +175,11 @@
                   class="offcanvas offcanvas-start"
                   data-bs-scroll="true"
                   data-bs-backdrop="false"
-                  tab../index="-1"
+                  tabindex="-1"
                   id="offcanvasScrolling"
                   aria-labelledby="offcanvasScrollingLabel"
                 >
-                  <div class="offcanvas->header">
+                  <div class="offcanvas-header">
                     <button
                       type="button"
                       class="btn-close mobile_menu_close text-reset"
@@ -187,32 +189,32 @@
                   </div>
                   <div class="offcanvas-body">
                     <ul class="navbar-nav main_menu_list m-auto">
-                      <li class="nav-item pe-4 dropdown">
+                      <li class="nav-item nav_item_has_child px-2 dropdown">
                         <a
                           class="nav-link"
                           aria-current="page"
                           href="../index.html"
-                          aria-expanded="false"
+                          role="button"
                           >Home</a
                         >
                       </li>
                       <li class="nav-item pe-4 dropdown">
-                        <a
-                          class="nav-link"
-                          href="shop-list.html"
-                          aria-expanded="false"
-                          >Shop</a
+                        <a class="nav-link" href="../organic/shop-list.html" aria-expanded="false"
+                          >Product</a
                         >
                       </li>
-                      <li class="nav-item pe-5">
-                        <a class="nav-link active" href="about-us.html"
+                      <li class="nav-item nav_item_has_child px-2 dropdown">
+                        <a
+                          class="nav-link active"
+                          href="shop-list.html"
+                          role="button"
                           >About</a
                         >
                       </li>
                       <li class="nav-item pe-4 dropdown">
                         <a
                           class="nav-link"
-                          href="contact-us.html"
+                          href="../organic/contact-us.html"
                           aria-expanded="false"
                           >Contact Us</a
                         >
@@ -226,14 +228,13 @@
                       <li>
                         <a
                           target="_blank"
-                          href="https://wa.me/919337454603/?text=I Want Spices"
+                          href="https://wa.me/919937290939/?text=I Want Spices"
                         >
-                        <img
-                        src="../organic/assets//images/cart/whatsapp.gif"
-                        alt="whatsapp icon"
-                        style="height: 75px;"
-
-                      />
+                          <img
+                            src="../organic/assets/images/cart/whatsapp.gif"
+                            alt="whatsapp icon"
+                            style="height: 50px;"
+                          />
                         </a>
                       </li>
                     </ul>
