--- a/organic/contact-us.html
+++ b/organic/contact-us.html
@@ -7,9 +7,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Organic - Food E-commerce HTML Template</title>
+    <title>Contact Us | Banshilal Spices</title>
     <!-- favicon icon -->
-    <link rel="shortcut icon" href="assets/images/icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logo/Bansilaal-logo.png" type="image/x-icon">
 
     <!-- Include fontawesome cdn -->
     <link rel="stylesheet" href="../../../../cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -119,12 +119,12 @@
                           <li>
                             <a
                               target="_blank"
-                              href="https://wa.me/919337454603/?text=I Want Spices"
+                              href="https://wa.me/919937290939/?text=I Want Spices"
                             >
                             <img
                             src="../organic/assets//images/cart/whatsapp.gif"
                             alt="whatsapp icon"
-                            style="height: 75px;"
+                            style="height: 50px;"
 
                           />
                             </a>
@@ -213,12 +213,12 @@
                          <li>
                             <a
                               target="_blank"
-                              href="https://wa.me/919337454603/?text=I Want Spices"
+                              href="https://wa.me/919937290939/?text=I Want Spices"
                             >
                             <img
                             src="../organic/assets//images/cart/whatsapp.gif"
                             alt="whatsapp icon"
-                            style="height: 75px;"
+                            style="height: 50px;"
 
                           />
                             </a>
