--- a/organic/shop-list-5.html
+++ b/organic/shop-list-5.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shop List - Organic - Food E-commerce HTML Template</title>
+    <title>Shop List | Banshilal Spices</title>
     <!-- favicon icon -->
     <link
       rel="shortcut icon"
-      href="assets/images/icons/favicon.ico"
+      href="assets/images/logo/Bansilaal-logo.png"
       type="image/x-icon"
     />
 
@@ -127,12 +127,12 @@
                       <li>
                         <a
                           target="_blank"
-                          href="https://wa.me/919337454603/?text=I Want Spices"
+                          href="https://wa.me/919937290939/?text=I Want Spices"
                         >
                         <img
                         src="../organic/assets//images/cart/whatsapp.gif"
                         alt="whatsapp icon"
-                        style="height: 75px;"
+                        style="height: 50px;"
 
                       />
                         </a>
@@ -225,12 +225,12 @@
                       <li>
                         <a
                           target="_blank"
-                          href="https://wa.me/919337454603/?text=I Want Spices"
+                          href="https://wa.me/919937290939/?text=I Want Spices"
                         >
                         <img
                         src="../organic/assets//images/cart/whatsapp.gif"
                         alt="whatsapp icon"
-                        style="height: 75px;"
+                        style="height: 50px;"
 
                       />
                         </a>
