--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                   <div class="banner_title m-auto" style="padding-top: 250px;">
                     <h2>
                       <span style="color: white">Organic</span>
-                      <font class="first" style="color: Red !important"  >Whole Spices & Foods You Cook</font>
+                      <font class="first" style="color: white !important"  >Whole Spices & Foods You Cook</font>
                       <!-- <font class="first"></font> -->
                       <font class="text-effect">
                         <span>H</span><span>e</span><span>a</span><span>l</span
