--- a/organic/about-us.html
+++ b/organic/about-us.html
@@ -599,7 +599,7 @@
                     <div class="col-lg-6">
                       <div class="product8_gallery">
                         <img
-                          src="assets/images/deals/abcjpg.jpg"
+                          src="../organic/assets/images/deals/abcjpg.jpg"
                           alt="image_not_found"
                         />
                       </div>
@@ -630,10 +630,7 @@
                         </div>
                         <div class="banner_desc py-3">
                           <p>
-                            Morbi eget congue lectus. Donec eleifend ultricies
-                            urna et euismod. Sed consectetur tellus eget odio
-                            aliquet, vel vestibulum tellus sollicitudin. Morbi
-                            maximus metus eu eros tincidunt
+                            Elevate your culinary creations with our premium spice blends. We source, process, and package a wide range of exquisite spices to enhance your dishes. Our commitment to quality, sustainability, and innovation sets us apart. Explore a world of flavors with our spice company. Transform ordinary meals into extraordinary experiences.
                           </p>
                         </div>
                       </div>
@@ -651,7 +648,7 @@
                     <div class="col-lg-6">
                       <div class="product8_gallery">
                         <img
-                          src="assets/images/deals/abcjpg.jpg"
+                          src="../organic/assets/images/deals/abcjpg.jpg"
                           alt="image_not_found"
                         />
                       </div>
@@ -699,7 +696,7 @@
                     <div class="col-lg-6">
                       <div class="product8_gallery">
                         <img
-                          src="assets/images/deals/abcjpg.jpg"
+                          src="../organic/assets/images/deals/abcjpg.jpg"
                           alt="image_not_found"
                         />
                       </div>
@@ -720,7 +717,7 @@
                         </div>
                         <div class="banner_title banner_title3 text-effect">
                           <h2>
-                            Organic Veggies & Foods You Cook
+                            Organic Whole Spices & Foods You Cook
                             <font>
                               <span>H</span><span>e</span><span>a</span
                               ><span>l</span><span>t</span><span>h</span
@@ -730,55 +727,12 @@
                         </div>
                         <div class="banner_desc py-3">
                           <p>
-                            Morbi eget congue lectus. Donec eleifend ultricies
-                            urna et euismod. Sed consectetur tellus eget odio
-                            aliquet, vel vestibulum tellus sollicitudin. Morbi
-                            maximus metus eu eros tincidunt
+                            Elevate your culinary creations with our premium spice blends. We source, process, and package a wide range of exquisite spices to enhance your dishes. Our commitment to quality, sustainability, and innovation sets us apart. Explore a world of flavors with our spice company. Transform ordinary meals into extraordinary experiences. 
                           </p>
                         </div>
                       </div>
-                      <div
-                        class="store_item_content d-flex justify-content-start align-items-center"
-                      >
-                        <div
-                          class="store_item d-flex justify-content-between align-items-center py-3"
-                          data-aos="fade-up"
-                          data-aos-duration="1000"
-                        >
-                          <div
-                            class="store_item_img d-flex justify-content-center align-items-center text-center me-3"
-                          >
-                            <a href="shop-list.html"
-                              ><img
-                                src="assets/images/category/ctg_icon6.png"
-                                alt="image_not_found"
-                            /></a>
-                          </div>
-                          <div class="store_item_title">
-                            <span>Promotions Of The Week</span>
-                          </div>
-                        </div>
-                        <div
-                          class="store_item d-flex justify-content-between align-items-center py-3"
-                          data-aos="fade-up"
-                          data-aos-duration="2000"
-                        >
-                          <div
-                            class="store_item_img d-flex justify-content-center align-items-center text-center me-3"
-                          >
-                            <a href="shop-list.html"
-                              ><img
-                                src="assets/images/category/ctg_icon7.png"
-                                alt="image_not_found"
-                            /></a>
-                          </div>
-                          <div class="store_item_title">
-                            <span>Promotions Of The Week</span>
-                          </div>
-                        </div>
-                      </div>
                       <div class="store_btn">
-                        <a href="#!"
+                        <a href="./shop-list.html"
                           ><button
                             type="button"
                             class="btn custom_btn load_more_1 rounded-pill px-5 py-3 text-white"
@@ -822,204 +776,6 @@
             </div>
           </div>
         </section>
-        <!-- brand section end -->
-
-        <!-- team section start
-        <section
-          class="team_section sec_space_xxs_50 position-relative"
-          data-aos="fade-up"
-          data-aos-duration="2000"
-        >
-          <div class="team_section_content">
-            <div class="team_top_content">
-              <div
-                class="offer_sub_title d-flex align-items-center justify-content-center pb-2"
-              >
-                <i class="far fa-circle"></i>
-                <i class="far fa-circle"></i>
-                <i class="far fa-circle"></i>
-                <span class="text-uppercase px-3">FRESH FROM OUR FARM</span>
-                <i class="far fa-circle"></i>
-                <i class="far fa-circle"></i>
-                <i class="far fa-circle"></i>
-              </div>
-              <div class="team_top_title text-center py-4">
-                <h2>Good Organic Team</h2>
-              </div>
-            </div>
-            <div class="team_inner_content">
-              <div class="container">
-                <div
-                  class="card-group justify-content-center align-items-center"
-                >
-                  <div class="team_content_wrap position-relative">
-                    <div class="row g-4">
-                      <div class="col-sm-6 col-md-4 col-lg-3">
-                        <div
-                          class="card team_content text-center"
-                          data-aos="fade-right"
-                          data-aos-duration="1000"
-                        >
-                          <img
-                            class="rounded-pill"
-                            src="assets/images/team/team3.png"
-                            class="card-img-top"
-                            alt="team3"
-                          />
-                          <div class="card-body team_author_content">
-                            <h5 class="card-title team_author_title">
-                              Michel Harsh
-                            </h5>
-                            <div class="card-text team_author_post py-2">
-                              Real Farmer
-                            </div>
-                            <div
-                              class="team_author_social_link d-flex justify-content-center justify-content-around align-items-center"
-                            >
-                              <a class="social_twitt" href="#!">
-                                <i class="fab fa-twitter"></i>
-                              </a>
-                              <a class="social_face" href="#!">
-                                <i class="fab fa-facebook-square"></i>
-                              </a>
-                              <a class="social_linked" href="#!">
-                                <i class="fab fa-linkedin"></i>
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-sm-6 col-md-4 col-lg-3">
-                        <div
-                          class="card team_content text-center"
-                          data-aos="fade-right"
-                          data-aos-duration="2000"
-                        >
-                          <img
-                            class="rounded-pill"
-                            src="assets/images/team/team4.png"
-                            class="card-img-top"
-                            alt="team3"
-                          />
-                          <div class="card-body team_author_content">
-                            <h5 class="card-title team_author_title">
-                              Michel Harsh
-                            </h5>
-                            <div class="card-text team_author_post py-2">
-                              Real Farmer
-                            </div>
-                            <div
-                              class="team_author_social_link d-flex justify-content-center justify-content-around align-items-center"
-                            >
-                              <a class="social_twitt" href="#!">
-                                <i class="fab fa-twitter"></i>
-                              </a>
-                              <a class="social_face" href="#!">
-                                <i class="fab fa-facebook-square"></i>
-                              </a>
-                              <a class="social_linked" href="#!">
-                                <i class="fab fa-linkedin"></i>
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-sm-6 col-md-4 col-lg-3">
-                        <div
-                          class="card team_content text-center"
-                          data-aos="fade-left"
-                          data-aos-duration="2000"
-                        >
-                          <img
-                            class="rounded-pill"
-                            src="assets/images/team/team5.png"
-                            class="card-img-top"
-                            alt="team3"
-                          />
-                          <div class="card-body team_author_content">
-                            <h5 class="card-title team_author_title">
-                              Michel Harsh
-                            </h5>
-                            <div class="card-text team_author_post py-2">
-                              Real Farmer
-                            </div>
-                            <div
-                              class="team_author_social_link d-flex justify-content-center justify-content-around align-items-center"
-                            >
-                              <a class="social_twitt" href="#!">
-                                <i class="fab fa-twitter"></i>
-                              </a>
-                              <a class="social_face" href="#!">
-                                <i class="fab fa-facebook-square"></i>
-                              </a>
-                              <a class="social_linked" href="#!">
-                                <i class="fab fa-linkedin"></i>
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-sm-6 col-md-4 col-lg-3">
-                        <div
-                          class="card team_content text-center"
-                          data-aos="fade-left"
-                          data-aos-duration="2000"
-                        >
-                          <img
-                            class="rounded-pill"
-                            src="assets/images/team/team6.png"
-                            class="card-img-top"
-                            alt="team3"
-                          />
-                          <div class="card-body team_author_content">
-                            <h5 class="card-title team_author_title">
-                              Michel Harsh
-                            </h5>
-                            <div class="card-text team_author_post py-2">
-                              Real Farmer
-                            </div>
-                            <div
-                              class="team_author_social_link d-flex justify-content-center justify-content-around align-items-center"
-                            >
-                              <a class="social_twitt" href="#!">
-                                <i class="fab fa-twitter"></i>
-                              </a>
-                              <a class="social_face" href="#!">
-                                <i class="fab fa-facebook-square"></i>
-                              </a>
-                              <a class="social_linked" href="#!">
-                                <i class="fab fa-linkedin"></i>
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- product category side image -->
-          <img
-            class="team_left_thumb position-absolute"
-            src="assets/images/shapes/shape11.png"
-            alt="image_not_found"
-          />
-          <img
-            class="team_right_thumb position-absolute"
-            src="assets/images/shapes/shape12.png"
-            alt="image_not_found"
-          />
-        </section> -->
-        <!-- team section start -->
-
-        <!-- service section start -->
-
-        <!-- service section end -->
-
-        <!-- instagram section start -->
-
         <section
           class="instagram_section instagram_style_1 sec_space_xs_70"
           data-aos="fade-up"
